src/scss/sizing.scss
/*

    1 - Mobile
    2 - Tablet
    3 - The rest

*/

@media only screen and (max-width: 550px) {
    /* rules for mobile devices */
    .hero-contents h1 {
        font-size: 50px !important;
    }
    .hero-contents span {
        font-size: 27px !important;
    }
    .navbar .logo {
        font-size: 1.5rem;
    }
    .navbar i {
        font-size: 2.5rem;
    }
    .desktop-only {
        display: none !important;
    }
    .box {
        width: 72vw;
        margin-left: auto;
        margin-right: auto;
        box-shadow: none;
    }
    .transparent-nav {
        background-color: var(--gray-2);
        background-image: none;
    }
    .intro .logo {
        font-size: 4rem;
    }
    .footer .icon-col .footer-icon {
        font-size: 30px;
    }
    .very-large-header {
        font-size: 4rem;
    }
    .large-header {
        font-size: 3rem;
    }
    .flags{
        position: absolute;
        bottom: 5px;
        right: inherit;
    }
}

@media only screen and (min-width:800px) {
    /* rules for monitors */
    .mobile-only {
        display: none !important;
    }
}

